[workspace]
members = [
    ".",  # Current project
    "projects/pump-fun-token-launcher"
]

workspace = { members = [".", "projects/pump-fun-token-launcher"] }

[workspace.dependencies]
solana-sdk = "~2.1.1"
solana-client = "~2.1.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
borsh = "0.10.3"
spl-associated-token-account = "4.0.0"

[package]
name = "second-pump-fun-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana ecosystem
solana-sdk = "~2.1.1"
solana-client = "~2.1.1"
solana-account-decoder = "~2.1.1"
solana-rpc-client-api = "~2.1.1"
jito-sdk-rust = "0.1.0"
solana-program = "~2.1.1"
solana-transaction-status = "~2.1.1"
spl-token = "5.0.2"
spl-associated-token-account = "4.0.0"
chrono = "0.4"
yellowstone-grpc-client = { version = "4.0.0" }
yellowstone-grpc-proto = { version = "4.0.0", default-features = false }
tonic = "0.12.1"               
clap = { version = "4.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["default-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.3"
base64 = "0.13"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"

# Configuration
dotenv = "0.15"

# Metrics
prometheus = "0.13"
prometheus-static-metric = "0.5"
lazy_static = "1.4"
warp = "0.3"
sysinfo = "0.29"

# Utilities
base58 = "0.2"
zeroize = "1.8.0"